--- a/udemy-app/src/components/course.css
+++ b/udemy-app/src/components/course.css
@@ -1,24 +1,32 @@
 a{
     text-decoration: none;
+
 }
-.card{
-    border: none;
-    margin-right: 10px;
-}
+
 a:hover{
     text-decoration: none;
 }
 .card{
     width: 200px;
-    max-width: 99%;
+    height: 250px;
+    max-width: 100%;
+    border: none;
+    margin-right: 10px;
 }
 .course-title{
     color: black;
     font-family: udemy sans,-apple-system,BlinkMacSystemFont,Roboto,segoe ui,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
-    font-weight: 700;
+    font-weight: 600;
     line-height: 1.2;
     letter-spacing: -.02rem;
     font-size: 0.8rem;
+    display: block !important;
+    display: -webkit-box !important;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
 }
 
 figcaption {
@@ -53,7 +61,7 @@ figcaption {
 .price{
     color: black;
     font-family: udemy sans,-apple-system,BlinkMacSystemFont,Roboto,segoe ui,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
-    font-weight: 700;
+    font-weight: 600;
     letter-spacing: -.03rem;
     font-size: 0.85rem;
     margin-top: -2px;
@@ -70,7 +78,7 @@ figcaption {
     color: #3d3c0a;
     border: 1px;
     font-family: udemy sans,-apple-system,BlinkMacSystemFont,Roboto,segoe ui,Helvetica,Arial,sans-serif,apple color emoji,segoe ui emoji,segoe ui symbol;
-    font-weight: 700;
+    font-weight: 600;
     font-size: 0.6rem;
     width: max-content;
 }
