Add course page click on any course will navigate to it's page with it's data add slidbar with dynamic data (if data not exist it will be hidden) add whatYouWillLearn component add course content make all buttons work when click Expand all sections button work Collapse all sections button work show more button work show less button work add requirements component add description component add instructors component for each instructor of the course (not only one) add studentFeedback component with real data (not static)

--- a/udemy-app/src/css/chapter.css
+++ b/udemy-app/src/css/chapter.css
@@ -56,13 +56,14 @@
     margin-left: 23px;
     color: #8c8d8f;
     text-decoration: dashed;
+    padding-right: 20px;
 }
 .canPlay:hover{
     cursor: pointer;
 }
-.lec-title{
-    width: 490px;
+.lecture{
+    font-size: 0.9rem;
 }
-.preview-lec{
-    width: 52px;
+.lec-title{
+    width: 400px;
 }
