--- a/udemy-app/src/css/courseContentContainer.css
+++ b/udemy-app/src/css/courseContentContainer.css
@@ -1,5 +1,6 @@
 .content-container{
     width: 700px;
+    max-width: 100%;
     margin-top: 40px;
 }
 .content-headline{
@@ -13,10 +14,10 @@
     color: #454648;
     font-size: 0.9rem;
 }
-.info-and-expand-btn{
+.info-and-expand-and-collapse-btn{
     margin-bottom: 7px;
 }
-.expand-btn{
+.expand-and-collapse-btn{
     background-color: inherit;
     border: none;
     color: #5624d0;
@@ -26,4 +27,17 @@
     line-height: 1.2;
     letter-spacing: -.02rem;
     font-size: 0.85rem;
+}
+.more-sections{
+    width: 100%;
+    margin-top: 15px;
+    border: 1px solid black;
+    background-color: white;
+    font-weight: 700;
+    font-size: 0.85rem;
+    height: 40px;
+}
+.more-sections:hover{
+    cursor: pointer;
+    background-color: #F5F5F5;
 }
