--- a/udemy-app/src/css/coursePage.css
+++ b/udemy-app/src/css/coursePage.css
@@ -1,11 +1,10 @@
 .main-content{
     width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    align-items: center;
 }
 .sub-content{
-    width: 1090px;
+    width: 750px;
     max-width: 100%;
 }
